tests/machine/x/c/group_by_multi_join_sort.c
#include <stdio.h>
#include <stdlib.h>

static char *start_date = "1993-10-01";
static char *end_date = "1994-01-01";

typedef struct {
  int n_nationkey;
  char *n_name;
} nationItem;
typedef struct {
  int len;
  nationItem *data;
} list_nationItem;
static list_nationItem list_nationItem_create(int len) {
  list_nationItem l;
  l.len = len;
  l.data = calloc(len, sizeof(nationItem));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_custkey;
  char *c_name;
  double c_acctbal;
  int c_nationkey;
  char *c_address;
  char *c_phone;
  char *c_comment;
} customerItem;
typedef struct {
  int len;
  customerItem *data;
} list_customerItem;
static list_customerItem list_customerItem_create(int len) {
  list_customerItem l;
  l.len = len;
  l.data = calloc(len, sizeof(customerItem));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int o_orderkey;
  int o_custkey;
  char *o_orderdate;
} ordersItem;
typedef struct {
  int len;
  ordersItem *data;
} list_ordersItem;
static list_ordersItem list_ordersItem_create(int len) {
  list_ordersItem l;
  l.len = len;
  l.data = calloc(len, sizeof(ordersItem));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int l_orderkey;
  char *l_returnflag;
  double l_extendedprice;
  double l_discount;
} lineitemItem;
typedef struct {
  int len;
  lineitemItem *data;
} list_lineitemItem;
static list_lineitemItem list_lineitemItem_create(int len) {
  list_lineitemItem l;
  l.len = len;
  l.data = calloc(len, sizeof(lineitemItem));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_custkey;
  int c_name;
  double revenue;
  int c_acctbal;
  int n_name;
  int c_address;
  int c_phone;
  int c_comment;
} resultItem;
typedef struct {
  int len;
  resultItem *data;
} list_resultItem;
static list_resultItem list_resultItem_create(int len) {
  list_resultItem l;
  l.len = len;
  l.data = calloc(len, sizeof(resultItem));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  nationItem tmp1_data[] = {(nationItem){.n_nationkey = 1, .n_name = "BRAZIL"}};
  list_nationItem tmp1 = {1, tmp1_data};
  list_nationItem nation = tmp1;
  customerItem tmp2_data[] = {(customerItem){.c_custkey = 1,
                                             .c_name = "Alice",
                                             .c_acctbal = 100.0,
                                             .c_nationkey = 1,
                                             .c_address = "123 St",
                                             .c_phone = "123-456",
                                             .c_comment = "Loyal"}};
  list_customerItem tmp2 = {1, tmp2_data};
  list_customerItem customer = tmp2;
  ordersItem tmp3_data[] = {
      (ordersItem){
          .o_orderkey = 1000, .o_custkey = 1, .o_orderdate = "1993-10-15"},
      (ordersItem){
          .o_orderkey = 2000, .o_custkey = 1, .o_orderdate = "1994-01-02"}};
  list_ordersItem tmp3 = {2, tmp3_data};
  list_ordersItem orders = tmp3;
  lineitemItem tmp4_data[] = {(lineitemItem){.l_orderkey = 1000,
                                             .l_returnflag = "R",
                                             .l_extendedprice = 1000.0,
                                             .l_discount = 0.1},
                              (lineitemItem){.l_orderkey = 2000,
                                             .l_returnflag = "N",
                                             .l_extendedprice = 500.0,
                                             .l_discount = 0.0}};
  list_lineitemItem tmp4 = {2, tmp4_data};
  list_lineitemItem lineitem = tmp4;
  list_resultItem result = 0;
  printf("%.16g\n", result);
  return 0;
}
